    * `LOGGING_FILE_LEVEL` -> `LOG_FILE_LEVEL`
      * default: `WARNING` -> `DEBUG`
    * `LOGGING_CONSOLE_LEVEL` -> `LOG_CONSOLE_LEVEL`
      * default: `WARNING` -> `DEBUG`
    * `LOGGING_SQLALCHEMY_LEVEL` -> `LOG_LEVEL_DB_CLIENT`
    * `LOGGING` -> `LOG_CONFIG`
  * default of `LOGGING_LEVEL` changed from `INFO` to `WARNING`

  Deprecations:
  * In the future config variable `LOGGING_LEVEL` will be replaced by `LOG_LEVEL`.
    `LOG_LEVEL` can and should be used from now on. `LOG_LEVEL` defaults to `WARNING`.

  Features:
  * new API endpoints to retrieve tokens:
    * /api/v2/tokens
      * accepts query parameters `userId` and `resolverName` to filter tokens by
      * accepts query parameter `searchTerm` to filter all other columns
    * /api/v2/tokens/<serial>
  * new API endpoint to retrieve realms:
    * /api/v2/realms
  * new API endpoint to retrieve users of a realm:
    * /api/v2/realms/<realm_name>/users
      * accepts any field of a user as query parameter to filter by
      * accepts query parameter `searchTerm` to filter users where one field matches the given value
  * new API endpoint to retrieve resolvers:
    * /api/v2/resolvers
  * new API endpoint to retrieve users of a resolver:
    * /api/v2/resolvers/<resolver_name>/users
      * accepts any field of a user as query parameter to filter by
      * accepts query parameter `searchTerm` to filter users where one field matches the given value
      * sortable by fields
    * /api/v2/resolvers/<resolver_name>/users/<user_id>
      * shows the single user info 
  * new API endpoint to retrieve AuditLog:
    * /api/v2/auditlog
      * accepts most fields of an AuditEntry as query parameter to filter by
  * new API endpoint to retrieve all currently reported token statuses:
    * /system/getReportedStatuses
      * accepts query parameter `realms` to filter by realms.
        Use `realms=*` to get all realms including `/:no realm:/`.